--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 </head>
 
 <body>
+  <style>
+    mwc-switch {
+      padding: 10px;
+    }
+  </style>
+
   <checked-clock>
     <input type="checkbox">
   </checked-clock>
@@ -17,8 +23,8 @@
     <input type="radio">
   </checked-clock>
 
-
-  <script type="module" src="../checked-clock.js"></script>
+  <!-- <script type="module" src="https://unpkg.com/@material/mwc-switch@0.6.0/mwc-switch.js?module"></script> -->
+  <script type="module" src="./checked-clock.js"></script>
 </body>
 
 </html>
